app/k8s/live/appA/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apps-gateway
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-a-vs
spec:
  hosts:
  - "app-a.local"
  gateways:
  - apps-gateway
  http:
  - name: 'app-a'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: app-a-service.apps.svc.cluster.local
